# ULPM

./: .gitignore  README.md  apps.json  install.sh  main.py  pyproject.toml  requirements.txt  safety.py  tweaks.py
.github/workflows/: ci.yml
src/ulpm/: distro.py  drivers.py  main.py  profiles.json  security.py  shell_setup.py  tweaks.py
